--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
 		<link rel="stylesheet" href="css/bootstrap/bootstrap-theme.min.css"/>
 		<link rel="stylesheet" href="css/timeline/timeline.css"/>
+		<link rel="shortcut icon" href="img/favicon.ico">
 	</head>
 	<body>
 		<div class="navbar navbar-default navbar-fixed-top">
