Create system builds page.

--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -36,7 +36,7 @@
 			
 			<hr style="margin-top: 20px"/>	
 			<footer>
-				<p>&copy; 2013 lorislab.org <a href="https://twitter.com/andrejpetras">Andrej Petras</a> &middot; Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>.</p>
+				<p>&copy; 2013 lorislab.org &middot; Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>.</p>
 			</footer>				
 		</div>
 			<script src="lib/timeline/timeline-min.js"></script>
