--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -37,12 +37,12 @@
 								<li><a href="#/settings/scm"><i class="icon-fork"></i> SCM systems</a></li>
 								<li><a href="#/settings/bts"><i class="icon-bug"></i> BTS systems</a></li>
 								<li class="divider"></li>
-								<li><a href="#/settings/projects"><i class="icon-award"></i> Projects</a></li>
-								<li><a href="#/settings/bts"><i class="icon-beaker"></i> Applications</a></li>
-								<li><a href="#/settings/bts"><i class="icon-suitcase"></i> Systems</a></li>
-								<li><a href="#/settings/bts"><i class="icon-user-md"></i> Agents</a></li>
+								<li><a href="#/settings/project"><i class="icon-award"></i> Projects</a></li>
+								<li><a href="#/settings/app"><i class="icon-beaker"></i> Applications</a></li>
+								<li><a href="#/settings/sys"><i class="icon-suitcase"></i> Systems</a></li>
+								<li><a href="#/settings/agent"><i class="icon-user-md"></i> Agents</a></li>
 								<li class="divider"></li>
-								<li><a href="#/settings/users"><i class="icon-users"></i> Users</a></li>								
+								<li><a href="#/settings/user"><i class="icon-users"></i> Users</a></li>								
 								<li><a href="#/settings/roles"><i class="icon-key"></i> Roles</a></li>		
 							</ul>
 						</li>
@@ -106,7 +106,25 @@
 		<!--DEV-JS-->
 		<script src="js/app.js"></script>
 		<script src="js/services.js"></script>
+		<script src="js/admin/agent/services.js"></script>
+		<script src="js/admin/app/services.js"></script>
+		<script src="js/admin/bts/services.js"></script>
+		<script src="js/admin/project/services.js"></script>
+		<script src="js/admin/roles/services.js"></script>
+		<script src="js/admin/scm/services.js"></script>
+		<script src="js/admin/services/services.js"></script>
+		<script src="js/admin/sys/services.js"></script>
+		<script src="js/admin/user/services.js"></script>
 		<script src="js/controllers.js"></script>
+		<script src="js/admin/agent/controllers.js"></script>
+		<script src="js/admin/app/controllers.js"></script>
+		<script src="js/admin/bts/controllers.js"></script>
+		<script src="js/admin/project/controllers.js"></script>
+		<script src="js/admin/roles/controllers.js"></script>
+		<script src="js/admin/scm/controllers.js"></script>
+		<script src="js/admin/services/controllers.js"></script>
+		<script src="js/admin/sys/controllers.js"></script>
+		<script src="js/admin/user/controllers.js"></script>		
 		<script src="js/filters.js"></script>
 		<script src="js/directives.js"></script>
 		<!--DEV-JS-->
