Add role administration page.

--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 								<li><a href="#/settings/agent"><i class="icon-user-md"></i> Agents</a></li>
 								<li class="divider"></li>
 								<li><a href="#/settings/user"><i class="icon-users"></i> Users</a></li>								
-								<li><a href="#/settings/roles"><i class="icon-key"></i> Roles</a></li>		
+								<li><a href="#/settings/role"><i class="icon-key"></i> Roles</a></li>		
 							</ul>
 						</li>
 					</ul>
@@ -110,7 +110,7 @@
 		<script src="js/admin/app/services.js"></script>
 		<script src="js/admin/bts/services.js"></script>
 		<script src="js/admin/project/services.js"></script>
-		<script src="js/admin/roles/services.js"></script>
+		<script src="js/admin/role/services.js"></script>
 		<script src="js/admin/scm/services.js"></script>
 		<script src="js/admin/services/services.js"></script>
 		<script src="js/admin/sys/services.js"></script>
@@ -120,7 +120,7 @@
 		<script src="js/admin/app/controllers.js"></script>
 		<script src="js/admin/bts/controllers.js"></script>
 		<script src="js/admin/project/controllers.js"></script>
-		<script src="js/admin/roles/controllers.js"></script>
+		<script src="js/admin/role/controllers.js"></script>
 		<script src="js/admin/scm/controllers.js"></script>
 		<script src="js/admin/services/controllers.js"></script>
 		<script src="js/admin/sys/controllers.js"></script>
