--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -72,12 +72,18 @@
 		<div class="container marketing">
 
 			<div data-ng-controller="ErrorCtrl">
-				<div style="margin-top: 10px" data-ng-show="errors.length > 0">
+				<div style="margin-top: 10px" data-ng-show="error">
+					<div class="alert alert-danger alert-dismissable">
+						<button type="button" class="close" data-dismiss="alert" aria-hidden="true"  ng-click="close()">&times;</button>
+						<i class="icon-attention"></i><b>Oh snap! </b>{{error.message}}
+					</div>
+				</div>
+<!--				<div style="margin-top: 10px" data-ng-show="errors.length > 0">
 					<div class="alert alert-danger alert-dismissable" data-ng-repeat="e in errors">
 						<button type="button" class="close" data-dismiss="alert" aria-hidden="true"  ng-click="close($index)">&times;</button>
 						<i class="icon-attention"></i><b>Oh snap! </b>{{e.message}}
 					</div>
-				</div>
+				</div>-->
 			</div>	
 			
 			<div data-ng-controller="MenuCtrl">
