Create the version information.

--- a/armonitor-web/src/main/webapp/index.html
+++ b/armonitor-web/src/main/webapp/index.html
@@ -99,7 +99,7 @@
 
 			<hr style="margin-top: 20px;"/>	
 			<footer style="text-align: center">
-				<p>&copy; 2013 <a href="http://www.lorislab.org" class="link-simple"><span class="label label-success">lorislab.org</span></a> &middot; Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>.</p>
+				<p>&copy; 2013 <a href="http://www.lorislab.org" class="link-simple"><span class="label label-success">lorislab.org</span></a> &middot; Release monitor <span data-app-version></span> &middot; Released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License v2.0</a>.</p>
 			</footer>				
 		</div>
 		<script src="lib/timeline/timeline-min.js"></script>
